<resources>
    <string name="app_name">AOsmart</string>
    <string name="action_inicio">Inicio</string>
    <string name="action_notificaciones">Mis Notificaciones</string>
    <string name="action_noticias">Noticias</string>
    <string name="action_crearticket">Crear Ticket</string>
    <string name="action_perfil">Mi Perfil</string>
    <string name="action_close_sesion">Cerrar sesion</string>

    <!--Excepciones y mensajes generales-->
    <string name="formularioIncompleto">Por favor diligenciar el formulario</string>
    <string name="campoIvalido">Campo Invalido</string>
    <string name="campoDepartamentoIvalido">Diligenciar Campo Departamento</string>
    <string name="campoTerminos">Por favor aceptar el campo Terminos</string>
    <string name="consultandoInfo">Consultando Información</string>
    <string name="registrandoInfo">Registrando Información</string>
    <string name="errorServiciosWEb">Error en la comunicación</string>
    <string name="errorPreferencias">Error en la aplicación</string>

    <!--Recuperar contraseña-->
    <string name="textRecuperarPass">Ingrese sus datos para recuperar su contraseña</string>
    <string name="boton_recuperar">Enviar Contraseña</string>
    <string name="title_activity_password">Contraseña</string>


    <!-- Activity Home-->
    <string name="boton_registro">Registrarme</string>
    <string name="boton_contrasena">No recuerdo mi contraseña</string>
    <string name="boton_ingresar">Ingresar</string>

    <!--Actyvity Ingreso -->
    <string name="usuario">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="sesion">No cerrar sesión</string>

    <!--Registro Uno -->
    <string name="name_Activity">Registro</string>
    <string name="titulo">1. Datos Personales</string>
    <string name="subtitulo">Paso 1 de 2</string>
    <string name="nombre">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Correo Electrónico</string>
    <string name="departamento">Departamento</string>
    <string name="ciudad">Ciudad</string>
    <string name="telefono">Teléfono / Celular</string>
    <string name="terminos">Acepto Términos y coniciones/Política de uso de datos</string>
    <string name="envio_inf">Acepto envío de información</string>
    <string name="boton_Paso2">Siguiente</string>

    <!--Registro Dos-->
    <string name="titulo_pasodos">2. Registrar Empresa</string>
    <string name="subtitulo_pasodos">Paso 2 de 2</string>
    <string name="nombre_empresa">Nombre de la empresa/Razón social</string>
    <string name="tipo_documento">Tipo de Documento</string>
    <string name="regimen">Regimen común o Gran contibuyente</string>
    <string name="num_documento">Número de Documento</string>
    <string name="ingresos">Ingresos último año</string>
    <string name="impuesto">Impuesto al consumo</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="contribuyentedeimpuesto">Contribuyente de impuesto a la riqueza</string>
    <string name="tip"><b>Tip:</b> Recuerda que puedes agregar empresas adicionales en tu perfil de administración</string>
    <string name="boton_finalizar">Finalizar Registro</string>
    <string name="boton_agregar">Agregar</string>
    <string name="boton_actualizar">Actualizar</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="fecha_Mercantil">Fecha de Registro Mercantil</string>
    <string name="periodicidad">Periodicidad</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_another">AnotherActivity</string>


    <!--Notificacion Activity-->
    <string name="title_activity_notificaciones">Notificaciones</string>
    <string name="impuestoNotificacion">Impuesto</string>
    <string name="empresNotificacion">Empresa</string>
    <string name="fechaNotificacion">Fecha</string>
    <string name="horaNotificacion">Hora</string>
    <string name="díasNotificacion">Días antes</string>
    <string name="horaAntesNotificacion">Hora Antes</string>
    <string name="botonEditar">Editar notificación</string>
    <string name="botonEliminar">Eliminar notificación</string>

    <!--MenuPrincipal Activity-->
    <string name="title_activity_menu">  Bienvenido</string>
    <string name="impuestos">Impuestos</string>
    <string name="empresas">Empresas</string>
    <string name="title_activity_perfil">Perfil</string>
    <string-array name="title_menuprincipal">
        <item name="tittle1">Mis notificaciones</item>
        <item name="tittle2">Mis tickets</item>
        <item name="tittle3">Mi Perfil</item>
    </string-array>
    <string-array name="title_perfil">
        <item name="tittle1">Mis Datos Personales</item>
        <item name="tittle2">Mis empresas inscritas</item>
    </string-array>
    <string-array name="title_tickets">
        <item name="tittle1">Pendientes</item>
        <item name="tittle2">Respondidos</item>
        <item name="tittle3">Por Calificar</item>
        <item name="tittle4">Calificados</item>
    </string-array>


    <!--Perfil-->
    <string name="editar_perfil">Editar mis datos de perfil</string>
    <string name="buton_actualizar">Actualizar Datos</string>
    <string name="buton_eliminar">Eliminar mi cuenta</string>


    <!--Listado empresa-->
    <string name="nombre_empresa_list">Nombre de la empresa</string>
    <string name="button_Agregar">Agregar Empresa</string>

    <!--Creacion de Tickets-->
    <string name="title_tickets">Mis tickets</string>
    <string name="titulo_activity">Agregar nuevo Ticket</string>
    <string name="titulo_ticket">Titulo</string>
    <string name="empresas_ticket">Empresa(s)A asociadas(s)</string>
    <string name="asunto_ticket">Asunto</string>
    <string name="crear_ticket">crear ticket</string>
    <string name="title_activity_ticket">Tickets</string>
    <string name="add_ticket">Agregar nuevo Ticket</string>

    <!--Edicion Tickets-->
    <string name="yo">Yo</string>
    <string name="soporte">Soporte</string>
    <string name="asunto">Asunto</string>
    <string name="boton_subirArchivo">Subir un archivo</string>
    <string name="boton_agregarRespuesta">Agregar respuesta</string>
    <string name="boton_cerrarRespuesta">Cerrar ticket</string>


    <!--Calificar Tickets-->
    <string name="boton_calificar">Calificar</string>

    <!-- Noticias-->
    <string name="title_noticias">Noticias</string>
    <string name="subtitle_noticias">Todos</string>

    <!--Calendario -->
    <string name="title_calendario">Calendario</string>


</resources>
