<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activitys.Registro_PasoUnoActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/textView_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/titulo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView_subtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView_titulo"
                android:layout_alignParentEnd="true"
                android:text="@string/subtitulo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:id="@+id/separator"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/textView_titulo"
                android:layout_centerVertical="true"
                android:background="#000"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_Form"
                android:layout_below="@+id/separator">


            <EditText
                android:id="@+id/editText_Nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_Apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_Nombres"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/apellidos"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_Apellidos"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <AutoCompleteTextView
                android:id="@+id/editText_Departamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_Email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/departamento" />

            <AutoCompleteTextView
                android:id="@+id/editText_Ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_Departamento"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/ciudad" />

            <EditText
                android:id="@+id/editText_Telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_Ciudad"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editText_Contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_Telefono"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/contrasena"
                android:inputType="textPassword" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/checkBox_terminos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_Form"
                android:layout_marginTop="10dp"
                android:text="@string/terminos" />

            <Button
                android:id="@+id/button_Continuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBox_terminos"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/boton_Paso2"
               />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
