<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context="com.aosas.audismart.activitys.IngresoActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_Usuario"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/usuario"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_Contrasena"
        android:layout_below="@+id/editText_Usuario"
        android:layout_centerHorizontal="true"
        android:hint="@string/contrasena"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sesion"
        android:id="@+id/checkBox_Sesion"
        android:layout_below="@+id/editText_Contrasena"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_ingresar"
        android:id="@+id/button_Ingresar"
        android:layout_below="@+id/checkBox_Sesion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="click"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_contrasena"
        android:id="@+id/button_Contrasena"
        android:background="@android:color/transparent"
        android:layout_below="@+id/button_Ingresar"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="click"/>
</RelativeLayout>
