<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aosas.audismart.activitys.Registro_PasoDosActivity">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/titulo_pasodos"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView_subtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView_titulo"
                android:layout_alignParentEnd="true"
                android:text="@string/subtitulo_pasodos"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:id="@+id/separator"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/textView_titulo"
                android:layout_centerVertical="true"
                android:background="#000"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_Form"
                android:layout_below="@+id/separator">

            <EditText
                android:id="@+id/editText_Nombre_Empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/nombre_empresa"
                />

                <AutoCompleteTextView
                    android:id="@+id/editText_Departamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText_Nombre_Empresa"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/departamento" />

                <AutoCompleteTextView
                    android:id="@+id/editText_Ciudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText_Departamento"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/ciudad" />




            <AutoCompleteTextView
                android:id="@+id/editText_TipoDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_Ciudad"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/tipo_documento" />

            <EditText
                android:id="@+id/editText_NumDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_TipoDocumento"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/num_documento" />

            <EditText
                android:id="@+id/editText_GCM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_NumDocumento"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/gcm"
           />
        </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:id="@+id/textView_Tip"
                android:layout_below="@+id/layout_Form"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/button_Finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_Tip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/boton_finalizar"
                android:onClick="click"/>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
